--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,12 @@ spring.datasource.url=jdbc:mysql://localhost:3306/first
 spring.datasource.username=root
 spring.datasource.password=IB#vh2421
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#spring.data.mongodb.uri=mongodb+srv://vindhyachaltiwari01:IB#vh2421@cluster0.tytimsu.mongodb.net/?retryWrites=true&w=majority
+
+
+
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=mydatabase
+
